fix: UI styles and add check if no items available in the list

--- a/zivy-project/src/index.css
+++ b/zivy-project/src/index.css
@@ -1,5 +1,6 @@
 :root {
-  font-family: cursive, Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
